--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <java.version>1.8</java.version>
         <json.version>20080701</json.version>
         <gson.version>2.8.6</gson.version>
+        <easyexcel.version>3.0.5</easyexcel.version>
     </properties>
     <dependencies>
         <dependency>
@@ -60,6 +61,13 @@
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
             <scope>compile</scope>
+        </dependency>
+
+        <!-- excel -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>${easyexcel.version}</version>
         </dependency>
 
         <!-- test -->
