--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <java.version>1.8</java.version>
         <json.version>20080701</json.version>
         <gson.version>2.8.6</gson.version>
-        <easyexcel.version>3.0.5s</easyexcel.version>
+        <easyexcel.version>3.0.5</easyexcel.version>
     </properties>
     <dependencies>
         <dependency>
